<resources>
    <!-- title -->
    <string name="title_note">ノート</string>
    <string name="title_history">よりみち履歴</string>
    <string name="title_shop">ショップ</string>
    <string name="title_setting">設定</string>
    <string name="title_read_notes">ノートを見る</string>

    <!-- tutorial -->
    <string name="tutorial_title1">こんにちは！</string>
    <string name="tutorial_title2">案内機能</string>
    <string name="tutorial_title3">検索機能</string>
    <string name="tutorial_title4">さあ、よりみちを\nはじめましょう！！</string>
    <string name="tutorial_description1">「よりみち」はよりみちで\nあなたの日常を変えるアプリです</string>
    <string name="tutorial_description2">よりみちのはじめからおわりまで\n完全サポートをします</string>
    <string name="tutorial_description3">あなたにピッタリのよりみちが\n簡単に見つかります</string>

    <!-- tab -->
    <string name="tab_map">地図</string>
    <string name="tab_search">よりみちを探す</string>
    
    <!-- drawer -->
    <string name="drawer_icon_description">現在のひよこ</string>
    <string name="drawer_badge">称号：</string>
    <string name="drawer_point">ポイント：</string>
    <string name="drawer_point_value">%1$dp</string>

    <!-- menu -->
    <string name="menu_sort_dist_asc">近い順</string>
    <string name="menu_sort_dist_desc">遠い順</string>
    <string name="menu_sort_rate_asc">評価が低い順</string>
    <string name="menu_sort_rate_desc">評価が高い順</string>
    <string name="menu_finish_guide">案内終了</string>
    <string name="menu_upload_note">アップロード</string>

    <!-- dialog -->
    <string name="dialog_simple_positive">OK</string>
    <string name="dialog_simple_negative">Cancel</string>
    <string name="dialog_location_permission_denied_message">位置情報が取得できないため、アプリを終了します。</string>
    <string name="dialog_create_user_failed_message">データの初期化に失敗したため、アプリを終了します。</string>
    <string name="dialog_upload_note_confirm_message">ノートを送信します</string>
    <string name="dialog_empty_place_message">よりみちできる場所が見つかりませんでした</string>
    <string name="dialog_point_get_main_message">%1$dポイントGET！\nどんどん集めよう！</string>
    <string name="dialog_point_get_movie_message">動画を見て%1$dポイント追加！</string>
    <string name="dialog_point_get_movie_done_message">動画視聴済み</string>
    <string name="dialog_point_get_watch_button">動画を見る</string>

    <!-- search -->
    <string name="search_radius">移動距離</string>
    <string name="search_category">カテゴリ</string>
    <string name="search_goto_other">目的地が決まっているなら…</string>
    <string name="search_query_hint">キーワード・住所で検索する</string>
    <string name="search_button_search">検索</string>
    <string name="search_button_goto">ここに行く</string>

    <!-- map -->
    <string name="map_reached">ついた！</string>
    <string name="map_chick_reached_message">ついた？</string>
    <string-array name="map_chick_messages">
        <item>ガチャピンとムックは師弟関係なんだって</item>
        <item>天ぷらは実はポルトガル語なんだって</item>
        <item>牛乳ときゅうりだときゅうりの方が水分量が多いんだって</item>
        <item>ガリガリ君のあたりの割合は100本に2本なんだって</item>
        <item>カピバラは時速50kmではしるんだって</item>
        <item>1円を作るには3円かかるんだって</item>
        <item>人間の体内時計は25時間なんだって</item>
        <item>｢〆｣は漢字なんだって</item>
        <item>品川駅は品川区じゃなくて港区にあるんだって</item>
        <item>マク〇ナルドのカウンターは全店72cmの高さなんだって</item>
    </string-array>
    <string name="map_can_write_note_message">よりみちしたお店のノートを書いてくれたらポイントがもらえるよ♪</string>
    <string name="map_can_not_write_note_message">他の人が書いたノートを見てみよう！</string>
    <string name="map_write_note">ノートを書く</string>
    <string name="map_read_note">ノートを見る</string>

    <!-- remind -->
    <string name="remind_reached_message">お疲れ様！\n帰りの案内は必要？\n\n時間の五分前になると、\n通知が来るよ！</string>
    <string name="remind_goto_message">どこに帰りたい？</string>
    <string name="remind_place_message">どこに行く？</string>
    <string name="remind_time_message">何時に帰る？</string>
    <string name="remind_need_finish_message">お疲れ様！\n\n戻る時間になったら\nリマインドするね！</string>
    <string name="remind_no_need_finish_message">ありがとう！\n\nよりみちをしたくなったら\nいつでもよんでね！</string>
    <string name="remind_need">必要！</string>
    <string name="remind_no_need">いらないよ</string>
    <string name="remind_go_back">もとの場所に戻る</string>
    <string name="remind_go_other">別の場所に戻る</string>
    <string name="remind_time_selected">決定！</string>
    <string name="remind_finish">案内を終了する</string>

    <!-- notes -->
    <string name="notes_no_content">この場所のノートはありません\n最初のノートを書きましょう！</string>

    <!-- history -->
    <string name="history_no_content">まだよりみちをしていません\nアプリを使ってよりみちをしよう！</string>

    <!-- setting -->
    <string name="setting_select_category">自動検索カテゴリ</string>
    <string name="setting_original_category">オリジナルカテゴリ設定</string>
    <string name="setting_original_category_hint1">オリジナルカテゴリ1</string>
    <string name="setting_original_category_hint2">オリジナルカテゴリ2</string>
    <string name="setting_original_category_hint3">オリジナルカテゴリ3</string>

    <!-- place types -->
    <string-array name="place_types">
        <item>カフェ</item>
        <item>ショッピングモール</item>
        <item>図書館</item>
        <item>本屋</item>
        <item>公園</item>
        <item>映画館</item>
        <item>ホームセンター</item>
        <item>洋服屋</item>
        <item>バー</item>
        <item>パン屋</item>
        <item>レストラン</item>
        <item>ペットショップ</item>
        <item>コンビニ</item>
        <item>美術館</item>
        <item>居酒屋</item>
        <item>ネットカフェ</item>
        <item>CDレンタル店</item>
        <item>カラオケ</item>
    </string-array>
</resources>
