<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <import type="android.view.View"/>
    <variable
        name="viewModel"
        type="jp.shiita.yorimichi.ui.remind.RemindViewModel"/>
</data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHalfTransparent"
    android:clickable="true"
    android:focusable="true">

    <!-- reached -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/reachedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.reachedVisible ? View.VISIBLE : View.GONE}">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/balloon_large"
            android:gravity="center"
            android:text="@string/remind_reached_message"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/chick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/needButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@string/remind_need"
            android:onClick="@{() -> viewModel.need()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/noNeedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@string/remind_no_need"
            android:onClick="@{() -> viewModel.noNeed()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/needButton" />
    </android.support.constraint.ConstraintLayout>

    <!-- goto -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/gotoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.gotoVisible ? View.VISIBLE : View.GONE}"
        tools:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/balloon_large"
            android:gravity="center"
            android:text="@string/remind_goto_message"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/chick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@string/remind_go_back"
            android:onClick="@{() -> viewModel.goBack()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <Button
            android:id="@+id/goOtherButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@string/remind_go_other"
            android:onClick="@{() -> viewModel.goOther()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goBackButton" />
    </android.support.constraint.ConstraintLayout>

    <!-- place -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/placeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.placeVisible ? View.VISIBLE : View.GONE}"
        tools:visibility="gone">
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/balloon_large"
            android:gravity="center"
            android:text="@string/remind_place_message"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/chick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_query_hint"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <fragment
            android:id="@+id/googleMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintBottom_toTopOf="@id/gotoPlaceButton"/>

        <jp.shiita.yorimichi.custom.IconButton
            style="@style/IconButton"
            android:id="@+id/gotoPlaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.gotoPlace()}"
            app:enabled="@{viewModel.selected}"
            app:src="@drawable/ic_pin"
            app:text="@string/search_button_goto"
            app:marginCenter="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/googleMap" />
    </android.support.constraint.ConstraintLayout>

    <!-- time -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.timeVisible ? View.VISIBLE : View.GONE}"
        tools:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/balloon_large"
            android:gravity="center"
            android:text="@string/remind_time_message"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/chick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timeSelectButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@{viewModel.timeString}"
            android:onClick="@{() -> viewModel.showTimePicker()}"
            tools:text="11:25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Button
            android:id="@+id/timeSelectedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@string/remind_time_selected"
            android:onClick="@{() -> viewModel.timeSelected()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeSelectButton" />
    </android.support.constraint.ConstraintLayout>

    <!-- finish -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/finishLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.finishVisible ? View.VISIBLE : View.GONE}"
        tools:visibility="gone">

        <TextView
            android:id="@+id/finishText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/balloon_large"
            android:gravity="center"
            android:text="@{viewModel.finishWithNeed ? @string/remind_need_finish_message : @string/remind_no_need_finish_message}"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/chick_fun"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_button"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorWhite"
            android:text="@string/remind_finish"
            android:onClick="@{() -> viewModel.finish()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
</layout>